# latex-documents-backup

./: .envrc  .python-version  README.md  pyproject.toml
annual_progression/ap-1/: Makefile  index.bbl  index.tex
annual_progression/ap-1/figures/: top_level_tree.tex  tree.tex
annual_progression/ap-1/sections/: aim_objectives_scope.tex  approach_and_methodology.tex  financial_expenditure.tex  introduction.tex  progress_to_date.tex  title_page.tex  work_plan.tex
annual_progression/ap-1/styles/: document_style.tex
annual_progression/ap-1/tables/: rtsg.tex
guides/deploy_website/: index.md
guides/vscode_latex/: index.md
research_objectives/ro-1/: Makefile  index.aux  index.blg  index.out  index.tex
research_objectives/ro-1/code/: maps.ipynb  pseudocode.tex
research_objectives/ro-1/code/cache/: test_metrics.pkl  trained_model_metrics.pkl
research_objectives/ro-1/sections/: abstract.tex  acronyms.tex  introduction.tex  literature_review.tex  methodology.tex  research_objectives.tex  results.tex
research_objectives/ro-1/styles/: document_style.tex
shared/bibliography/: references.bib
shared/cover_pages/: simple_title_page.tex
shared/styles/: document_style.tex  govuk_colors.sty
shared/templates/: Makefile  basic_template.tex  eisvogel.tex  general_template.fdb_latexmk  general_template.fls  general_template.tex
supporting_documents/data_management_plan/: Makefile  index.tex
supporting_documents/data_management_plan/styles/: document_style.tex
supporting_documents/data_management_plan/tables/: sample_data.tex
(+6 files in other folders)
